DATABASES/MAILDB/sqdb100/templates/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: smartquaildb
  namespace: db-srv
  labels:
    app: postgres
spec:
  selector:
    app: postgres
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
  type: ClusterIP
